feat(backend): implement AI contract v2